# Prep

./: AGENTS.md  CLAUDE.md  pyproject.toml
prep/: __init__.py  __main__.py  cli.py
prep/core/: configurable.py  path_model.py
prep/io/: base.py  prep_writer.py
prep/io/importers/prep/: reader.py
prep/io/importers/svg/: __init__.py  inkscape.py  reader.py
prep/pipeline/: base.py
prep/pipeline/steps/: cut_order.py  layout.py  optimizer.py  splitter.py
prep/ui/: main_window.py
